--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <!-- cargamos el css de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- css Nosotros   -->
+    <link rel="stylesheet" href="./style_nos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
+        integrity="sha512-rN/+lhZ+X8IvHJNrcE0gJLEHznpSPdjx+1CjJstvuBQDzWXbcaXoO/Yz+DF1LJklLzBw5SXTU5P5U5EDlcA/1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>TrabajoFinalGrupo2</title>
 </head>
-
 
 <body>
 
@@ -392,14 +396,46 @@
             </div>
         </div>
     </div>
-    <div id="Nosotros1" class="mb-5">
+    <div id="Nosotros" class="mb-5">
         <br>
     </div>
     <footer>
+        <div id="#Nosotros1" class="mb-5">
+            <br>
+        </div>
         <div class="container bg-body-secondary "><!--Sección Nosotros-->
             <h2 class="display-6">Nosotros</h2>
-            <section id="Nosotros" class="row  nos ">
-
+            <section id="Nosotros" class="row">
+                <div class="container">
+                    <h2 class="section-title">Conoce a nuestro equipo</h2>
+                    <div class="team">
+                      <div class="team-member">
+                        <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Persona 1">
+                        <h4>Juan Carlos Dileo</h4>
+                        <p>bdileo35@gmail.com</p>
+                      </div>
+                      <div class="team-member">
+                        <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="Persona 2">
+                        <h4>Gustavo Ferrer</h4>
+                        <p>gustavoferrer1@gmail.com</p>
+                      </div>
+                        <div class="team-member">
+                        <img src="https://randomuser.me/api/portraits/women/4.jpg" alt="Persona 4">
+                        <h4>Virginia A.Gutierrez </h4>
+                        <p>virginia1612@gmail.com</p>
+                      </div>
+                      <div class="team-member">
+                        <img src="https://randomuser.me/api/portraits/men/6.jpg" alt="Persona 5">
+                        <h4>José Pedraza</h4>
+                        <p>jose_maria71@hotmail.com</p>
+                      </div>
+                      <div class="team-member">
+                        <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Persona 3">
+                        <h4>Diego Terra</h4>
+                        <p>cesarterra1975@gmail.com</p>
+                      </div>
+                    </div>
+                  </div>
             </section>
         </div>
     </footer>
