--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <article class="row">
                     <h3 id="Historia" class="display-6 mb-5">Historia</h3>
 
-                   
+
                     <div class="col-lg-4 bg-body-secondary">
                         <figure class="my-5 d-flex flex-column historia">
                             <img src="./assets/historia.jpeg" width="300" height="189" alt="Construccion de El Rulo">
@@ -395,12 +395,7 @@
 
             </div>
         </div>
-    </div>
-    <div id="Nosotros" class="mb-5">
-        <br>
-    </div>
-    <footer>
-        <div id="#Nosotros1" class="mb-5">
+        <div id="Nosotros1" class="mb-5">
             <br>
         </div>
         <div class="container bg-body-secondary "><!--Sección Nosotros-->
@@ -409,35 +404,37 @@
                 <div class="container">
                     <h2 class="section-title">Conoce a nuestro equipo</h2>
                     <div class="team">
-                      <div class="team-member">
-                        <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Persona 1">
-                        <h4>Juan Carlos Dileo</h4>
-                        <p>bdileo35@gmail.com</p>
-                      </div>
-                      <div class="team-member">
-                        <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="Persona 2">
-                        <h4>Gustavo Ferrer</h4>
-                        <p>gustavoferrer1@gmail.com</p>
-                      </div>
                         <div class="team-member">
-                        <img src="https://randomuser.me/api/portraits/women/4.jpg" alt="Persona 4">
-                        <h4>Virginia A.Gutierrez </h4>
-                        <p>virginia1612@gmail.com</p>
-                      </div>
-                      <div class="team-member">
-                        <img src="https://randomuser.me/api/portraits/men/6.jpg" alt="Persona 5">
-                        <h4>José Pedraza</h4>
-                        <p>jose_maria71@hotmail.com</p>
-                      </div>
-                      <div class="team-member">
-                        <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Persona 3">
-                        <h4>Diego Terra</h4>
-                        <p>cesarterra1975@gmail.com</p>
-                      </div>
+                            <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Persona 1">
+                            <h4>Juan Carlos Dileo</h4>
+                            <p>bdileo35@gmail.com</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="Persona 2">
+                            <h4>Gustavo Ferrer</h4>
+                            <p>gustavoferrer1@gmail.com</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="https://randomuser.me/api/portraits/women/4.jpg" alt="Persona 4">
+                            <h4>Virginia A.Gutierrez </h4>
+                            <p>virginia1612@gmail.com</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="https://randomuser.me/api/portraits/men/6.jpg" alt="Persona 5">
+                            <h4>José Pedraza</h4>
+                            <p>jose_maria71@hotmail.com</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Persona 3">
+                            <h4>Diego Terra</h4>
+                            <p>cesarterra1975@gmail.com</p>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </section>
         </div>
+    </div>
+    <footer>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
