--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                         </div>
                         <div class="team-member">
                             <img src="https://randomuser.me/api/portraits/men/3.jpg" alt="Persona 2">
-                            <h4>Gustavo Ferrer</h4>
-                            <p>gustavoferrer1@gmail.com</p>
+                            <h4>Gustavo Furrer</h4>
+                            <p>gustavofurrer1@gmail.com</p>
                         </div>
                         <div class="team-member">
                             <img src="https://randomuser.me/api/portraits/women/4.jpg" alt="Persona 4">
