--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
         <div id="Nosotros1" class="mb-5">
             <br>
         </div>
-        <div class="container bg-body-secondary "><!--Sección Nosotros-->
+        <div class="container  "><!--Sección Nosotros-->
             <h2 class="display-6">Nosotros</h2>
             <section id="Nosotros" class="row">
-                <div class="container">
-                    <h2 class="section-title">Conoce a nuestro equipo</h2>
-                    <div class="team">
+                
+                <h2 class="section-title">Conoce a nuestro equipo</h2>
+                <div class="team bg-body-secondary ">
                         <div class="team-member">
                             <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Persona 1">
                             <h4>Juan Carlos Dileo</h4>
@@ -430,12 +430,11 @@
                             <p>cesarterra1975@gmail.com</p>
                         </div>
                     </div>
-                </div>
+                
             </section>
         </div>
     </div>
-    <footer>
-    </footer>
+   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
