Actualizado: fotos form, TyC y error de ref

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    Gracias por colaborar con la DVP
+                                    Gracias por comunicarte con la DPV
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
