--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- css Nosotros   -->
     <link rel="stylesheet" href="./style_nos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
         integrity="sha512-rN/+lhZ+X8IvHJNrcE0gJLEHznpSPdjx+1CjJstvuBQDzWXbcaXoO/Yz+DF1LJklLzBw5SXTU5P5U5EDlcA/1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <title>TrabajoFinalGrupo2</title>
 </head>
 
@@ -314,7 +314,7 @@
 
                                 <div class="mb-3">
                                     <input type="checkbox" id="check" class="form-check-input">
-                                    <label for="check" class="form-check-label">Acepto Términos y Condiciones</label>
+                                    <label for="check" class="form-check-label">Acepto <a href="./assets/Terminos y condiciones.pdf" target="_blank">Términos y Condiciones</a></label>
                                 </div>
 
                             </fieldset>
