--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <img src="./assets/logoDpv.png" width="50" alt="logotipo">
                 <span class="ms-3 isoTipo">Dirección Provincial de Vialidad</span>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
