Corrección botón menú del celular

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <!--menu sitio -->
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link " href="#Inicio1">Inicio <span class="sr-only">(current)</span></a>
@@ -314,7 +314,9 @@
 
                                 <div class="mb-3">
                                     <input type="checkbox" id="check" class="form-check-input">
-                                    <label for="check" class="form-check-label">Acepto <a href="./assets/Terminos y condiciones.pdf" target="_blank">Términos y Condiciones</a></label>
+                                    <label for="check" class="form-check-label">Acepto <a
+                                            href="./assets/Terminos y condiciones.pdf" target="_blank">Términos y
+                                            Condiciones</a></label>
                                 </div>
 
                             </fieldset>
